Add link to github release page.

--- a/downloads.html
+++ b/downloads.html
@@ -123,6 +123,7 @@
 			<div>
 				<p>Due to a problem (not security related) with the file server, downloads are currently not possible. Snap, Flatpak, Docker and the OBS builds are not affected.</p>
 				<p>We are working on a fix, but it might take a couple of days to get everything up and running again.</p>
+				<p>The 2021.01 release packages can be downloaded from the <a href="https://github.com/openscad/openscad/releases/tag/openscad-2021.01">Github release page</a></p>
 			</div>
 		</section-area>
 
