Add book Make: Trigonometry; Update homepage banner.

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -142,6 +142,45 @@
         <p>Read more at <a href="https://programmingwithopenscad.github.io/">programmingwithopenscad.github.io</a></p>
       </p>
       <p style="clear: both"><br></p>
+      <p id="make-trigonometry">
+        <img class="libimg" width="200" src="images/Make-Trigonometry-Cover.jpg" align="right">
+        <h2>Make: Geometry</h2>
+        <p>
+          Using 3D printable models and readily-available physical objects like wire and cardboard
+          tubes, you'll learn to develop intuition about concepts in trigonometry and basic analytic
+          geometry. You'll will imagine the thought process of the people who invented these
+          mathematical concepts, and can try out "math experiments" to see for yourself how
+          ingenious ancient navigators and surveyors really were.
+        </p>
+        <p>
+          Models for many of the concepts are available for download in a freely-available open
+          source repository. They were created in the free program OpenSCAD, and can be 3D printed
+          or modified by the student in OpenSCAD to learn a little coding along the way.
+        </p>
+        <p>
+          The analytic geometry part of the book links equations to many of these intuitive concepts,
+          which we explore through in-depth explanations of manipulative models of conic sections.
+          This book is good for high school students who might be in Algebra II or Pre-Calculus, or
+          equivalent. It shows the geometrical and practical sides of these topics that otherwise
+          can drown in their own algebra.
+        </p>
+        <div class="book-data">
+        <ul>
+          <li>Author: Joan Horvath, Rich Cameron
+            &nbsp <a href="https://www.nonscriptum.com/"><span class="fas fa-external-link-alt"></span></a>
+          </li>
+          <li>Publisher: Make Community, LLC
+            &nbsp <a href="https://make.co/"><span class="fas fa-external-link-alt"></span></a>
+          </li>
+          <li>Date: October 2023</li>
+          <li>ISBN: 978-1-68-045798-8</li>
+        </ul>
+        </div>
+        <p>Github Repository: <a href="https://github.com/whosawhatsis/Trigonometry/"><span class="fab fa-github"></span> whosawhatsis/Trigonometry</a></p>
+        <p>Buy from Make: <a href="https://www.makershed.com/products/make-trigonometry-print">Print</a> / <a href="https://www.makershed.com/products/make-trigonometry-epub-pdf">PDF & ePub</a></p>
+        <p>Order from <a href="https://www.amazon.com/dp/1680457985/">Amazon</a></p>
+      </p>
+      <p style="clear: both"><br></p>
       <p id="make-calculus">
         <img class="libimg" width="200" src="images/Make-Calculus-Cover.jpg" align="right">
         <h2>Make: Calculus</h2>
