--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
       <div class="ticker-wrap">
         <div class="ticker-move ticker-animation">
           <div class="ticker-item"><div class="ticker-content">OpenSCAD Chat: <a target="_blank" href="https://web.libera.chat/?channel=#openscad">#openscad</a> (on IRC network <a target="_blank" href="https://libera.chat/">libera.chat</a>)</div></div>
-          <div class="ticker-item"><div class="ticker-content">Models @ MakeWithTech:<br><a target="_blank" href="https://makewithtech.com/creators-you-deserve-to-get-paid/">Creators. You Deserve to Get Paid.</a></div></div>
-          <div class="ticker-item"><div class="ticker-content">New Book (in french): <a href="documentation-books.html#geometrie-dans-le-space-et-impression-3d">Géométrie dans l'espace et impression 3D</a><br><i>Apprendre à utiliser GeoGebra 3D et OpenSCAD pour imaginer et réaliser ses propres objets</i></div></div>
+          <div class="ticker-item"><div class="ticker-content">New Book: <a href="documentation-books.html#make-trigonometry">Make: Trigonometry</a><br><i>Build your way from triangles to analytic geometry</i></div></div>
           <div class="ticker-item"><div class="ticker-content">New Book: <a href="documentation-books.html#make-calculus">Make: Calculus</a><br><i>Build models to learn, visualize and explore</i></div></div>
+          <div class="ticker-item"><div class="ticker-content">Models @ MakeWithTech:<br><a target="_blank" href="https://makewithtech.com/creators-you-deserve-to-get-paid/">Creators. You Deserve to Get Paid.</a></div></div>
           <div class="ticker-item"><div class="ticker-content">OpenSCAD on social media: <a href="https://fosstodon.org/@OpenSCAD">Mastodon</a> | <a href="https://twitter.com/openscad">Twitter</a></div></div>
           <div class="ticker-item"><div class="ticker-content">Share customizable designs: <a href="https://www.3dcustomizer.net/">3dcustomizer.net</a></div></div>
           <div class="ticker-item"><div class="ticker-content">OpenSCAD Chat: <a target="_blank" href="https://web.libera.chat/?channel=#openscad">#openscad</a> (on IRC network <a target="_blank" href="https://libera.chat/">libera.chat</a>)</div></div>
