--- a/documentation-books.html
+++ b/documentation-books.html
@@ -144,7 +144,7 @@
       <p style="clear: both"><br></p>
       <p id="make-trigonometry">
         <img class="libimg" width="200" src="images/Make-Trigonometry-Cover.jpg" align="right">
-        <h2>Make: Geometry</h2>
+        <h2>Make: Trigonometry</h2>
         <p>
           Using 3D printable models and readily-available physical objects like wire and cardboard
           tubes, you'll learn to develop intuition about concepts in trigonometry and basic analytic
