Add OBS link to the release key.

--- a/downloads.html
+++ b/downloads.html
@@ -613,7 +613,8 @@
 
 				<h2>Debian / Ubuntu packages built on <a href="https://build.opensuse.org/">OpenSUSE build service</a></h2>
 
-				<p>The release key must be added to the apt key-ring so apt-get, apt and other tools can validate the packages.<br>
+				<p>The <a href="https://build.opensuse.org/projects/home:t-paul/signing_keys">release key</a> must be added to
+					the apt key-ring so apt-get, apt and other tools can validate the packages.<br>
 					<code>Key ID: 75F3214F30EB8E08 (valid till 2025-07-09)</code><br/>
 					<code>Key UID: home:t-paul OBS Project &lt;home:t-paul@build.opensuse.org&gt;</code>
 					<code>Fingerprint: 5F4A 8A2C 8BB1 1716 F294 82BB 75F3 214F 30EB 8E08</code></p>
