--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta property="og:url" content="https://openscad.org" />
         <meta property="og:image" content="https://openscad.org/assets/img/logo.png" />
         <meta name="p:domain_verify" content="e7ccfb283cc55dd8e8ce7a4641376553"/>
+	<meta name="flattr:id" content="nk9ojn">
 	<link href="assets/css/style.css" rel="stylesheet"/>
 
 	<link href="assets/fonts/open-sans/all.css" rel="stylesheet">
