--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<link href="assets/fontawesome/css/brands.min.css" rel="stylesheet">
 	<link href="assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
 
+	<script src="advent-calendar-2023/snow.js"></script>
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
 	<script src="assets/js/modernizr-1.7.min.js"></script>
 
@@ -35,6 +36,11 @@
 	<script src="inc/win_release_links.js"></script>
 	<script src="assets/js/home.js"></script>
 	<script src="assets/js/header.js"></script>
+	<script type="text/javascript">
+          window.onload = function() {
+	    new Snow('#snow', { number:12, r: 2.5, v: 1 });
+	  }
+	</script>
 <style>
 .header {
   background-color: #444;
@@ -107,19 +113,21 @@
 	</div>
 	
   <article>
-    <section-area id="ticker">
+    <div id="snow">
+    <section-area id="ticker" class="snow">
       <div class="ticker-wrap">
         <div class="ticker-move ticker-animation">
+          <div class="ticker-item"><div class="ticker-content"><big><a href="/advent-calendar-2023">OpenSCAD Advent Calendar 2023</a></big></div></div>
           <div class="ticker-item"><div class="ticker-content">OpenSCAD Chat: <a target="_blank" href="https://web.libera.chat/?channel=#openscad">#openscad</a> (on IRC network <a target="_blank" href="https://libera.chat/">libera.chat</a>)</div></div>
           <div class="ticker-item"><div class="ticker-content">New Book: <a href="documentation-books.html#make-trigonometry">Make: Trigonometry</a><br><i>Build your way from triangles to analytic geometry</i></div></div>
           <div class="ticker-item"><div class="ticker-content">New Book: <a href="documentation-books.html#make-calculus">Make: Calculus</a><br><i>Build models to learn, visualize and explore</i></div></div>
-          <div class="ticker-item"><div class="ticker-content">Models @ MakeWithTech:<br><a target="_blank" href="https://makewithtech.com/creators-you-deserve-to-get-paid/">Creators. You Deserve to Get Paid.</a></div></div>
           <div class="ticker-item"><div class="ticker-content">OpenSCAD on social media: <a href="https://fosstodon.org/@OpenSCAD">Mastodon</a> | <a href="https://twitter.com/openscad">Twitter</a></div></div>
           <div class="ticker-item"><div class="ticker-content">Share customizable designs: <a href="https://www.3dcustomizer.net/">3dcustomizer.net</a></div></div>
-          <div class="ticker-item"><div class="ticker-content">OpenSCAD Chat: <a target="_blank" href="https://web.libera.chat/?channel=#openscad">#openscad</a> (on IRC network <a target="_blank" href="https://libera.chat/">libera.chat</a>)</div></div>
+          <div class="ticker-item"><div class="ticker-content"><big><a href="/advent-calendar-2023">OpenSCAD Advent Calendar 2023</a></big></div></div>
         </div>
       </div>
     </section-area>
+    </div>
 
     <section>
 			<h1><strong><span class="green">Open</span>SCAD</strong> is software for creating solid 3D CAD objects.</h1>
