Fix position of snow canvas.

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 	<script src="assets/js/home.js"></script>
 	<script src="assets/js/header.js"></script>
 	<script type="text/javascript">
-          window.onload = function() {
+          document.addEventListener("DOMContentLoaded", function() {
 	    new Snow('#snow', { number:12, r: 2.5, v: 1 });
-	  }
+	  });
 	</script>
 <style>
 .header {
