Allow more files (up to 8) for src/bin tags.

--- a/advent-calendar-2023/index.html
+++ b/advent-calendar-2023/index.html
@@ -578,11 +578,17 @@ Doors open midnight UTC
         <li id="src-2" class="src"><i data-feather="file-text" width="32" height="32" stroke-width="1"></i><a></a></li>
         <li id="src-3" class="src"><i data-feather="file-text" width="32" height="32" stroke-width="1"></i><a></a></li>
         <li id="src-4" class="src"><i data-feather="file-text" width="32" height="32" stroke-width="1"></i><a></a></li>
+        <li id="src-5" class="src"><i data-feather="file-text" width="32" height="32" stroke-width="1"></i><a></a></li>
+        <li id="src-6" class="src"><i data-feather="file-text" width="32" height="32" stroke-width="1"></i><a></a></li>
+        <li id="src-7" class="src"><i data-feather="file-text" width="32" height="32" stroke-width="1"></i><a></a></li>
         <li id="bin-0" class="bin"><i data-feather="printer" width="32" height="32" stroke-width="1"></i><a></a></li>
         <li id="bin-1" class="bin"><i data-feather="printer" width="32" height="32" stroke-width="1"></i><a></a></li>
         <li id="bin-2" class="bin"><i data-feather="printer" width="32" height="32" stroke-width="1"></i><a></a></li>
         <li id="bin-3" class="bin"><i data-feather="printer" width="32" height="32" stroke-width="1"></i><a></a></li>
         <li id="bin-4" class="bin"><i data-feather="printer" width="32" height="32" stroke-width="1"></i><a></a></li>
+        <li id="bin-5" class="bin"><i data-feather="printer" width="32" height="32" stroke-width="1"></i><a></a></li>
+        <li id="bin-6" class="bin"><i data-feather="printer" width="32" height="32" stroke-width="1"></i><a></a></li>
+        <li id="bin-7" class="bin"><i data-feather="printer" width="32" height="32" stroke-width="1"></i><a></a></li>
       </ul>
       <br clear="all">
       <div id="info" class="info">
