Don't strip folder names given in JSON. Reduce font size of file entries.

--- a/advent-calendar-2023/index.html
+++ b/advent-calendar-2023/index.html
@@ -44,7 +44,7 @@
       return s.substr(s.length-size);
     }
     function getName(path) {
-      return path.replace(/^.*[\\\/]/, '')
+      return path;
     }
     function getList(v) {
       if (v) {
@@ -485,7 +485,7 @@ a.link:hover {
 
 .modal-body li {
   font-family: "Open Sans";
-  font-size: 1.5em;
+  font-size: 1.4em;
   color: #9dcb51;
   list-style: none;
   line-height: 2em;
