Add BountySource warning.

--- a/community.html
+++ b/community.html
@@ -118,7 +118,7 @@
         <li>We accept sponsorships as well as individual donations</li>
         <li>For sponsorship opportunities, please contact <a href="mailto:info@openscad.org">info@openscad.org</a></li>
         <li>For donations, we have an <a href="https://opencollective.com/openscad/donate">Open Collective account</a></li>
-        <li>It's also possible to place bounties on individual issues using <a href="https://www.bountysource.com/#trackers/52063-openscad">BountySource</a></li>
+        <li>Please do not use BountySource for now, their status is unknown and it's unclear if they still process bounties as expected!</li>
       </ul>
 		</section>
 	
