Update Advent Calendar; Open doors; Add to gallery.

--- a/advent-calendar-2019/index.html
+++ b/advent-calendar-2019/index.html
@@ -290,6 +290,8 @@ All scripts are licensed <a class="footer" href="https://creativecommons.org/pub
 <span class="sep">-</span>
 <a class="footer" href="https://openscad.org/advent-calendar-2022/">2022</a>
 <span class="sep">-</span>
+<a class="footer" href="https://openscad.org/advent-calendar-2023/">2023</a>
+<span class="sep">-</span>
 </div>
 </body>
 </html>
