--- a/advent-calendar-2020/index.html
+++ b/advent-calendar-2020/index.html
@@ -335,6 +335,8 @@ All scripts are licensed <a class="link" href="https://creativecommons.org/publi
 <span class="sep">-</span>
 <a class="link" href="https://openscad.org/advent-calendar-2022/">2022</a>
 <span class="sep">-</span>
+<a class="link" href="https://openscad.org/advent-calendar-2023/">2023</a>
+<span class="sep">-</span>
 </div>
 </body>
 </html>
