--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,8 @@
 	<link href="assets/css/style.css" rel="stylesheet">
   
 	<link href="assets/fonts/open-sans/all.css" rel="stylesheet">
+	<link href="assets/fontawesome/css/brands.min.css" rel="stylesheet">
+	<link href="assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
 
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
 	<script src="assets/js/modernizr-1.7.min.js"></script>
@@ -70,10 +72,12 @@
 		</ul>
 		<h1>#SCADvent</h1>
 		<ul>
-			<li><a href="https://openscad.org/advent-calendar-2019">2019 OpenSCAD Advent Calendar</a></li>
-			<li><a href="https://openscad.org/advent-calendar-2020">2020 OpenSCAD Advent Calendar</a></li>
-			<li><a href="https://openscad.org/advent-calendar-2021">2021 OpenSCAD Advent Calendar</a></li>
-			<li><a href="https://openscad.org/advent-calendar-2022">2022 OpenSCAD Advent Calendar</a></li>
+			<li><a href="https://fosstodon.org/tags/SCADvent">...on Fosstodon</a> <span class="fab fa-mastodon fa-xs"></span></li>
+			<li><a href="advent-calendar-2019/">2019 Advent Calendar</a></li>
+			<li><a href="advent-calendar-2020/">2020 Advent Calendar</a></li>
+			<li><a href="advent-calendar-2021/">2021 Advent Calendar</a></li>
+			<li><a href="advent-calendar-2022/">2022 Advent Calendar</a></li>
+			<li><a href="advent-calendar-2023/">2023 Advent Calendar</a></li>
 		</ul>
 	</div>
 	
