--- a/documentation-books.html
+++ b/documentation-books.html
@@ -89,7 +89,7 @@
   </div>
 
   <article>
-    <section-area>
+    <section-head>
       <div class="link-grid">
         <div class="link-button">
           <a href="documentation.html"><i class="fas fa-scroll"></i></a>
@@ -108,7 +108,7 @@
           <h1><a href="documentation-articles.html">Articles / Blogs</a></h1>
         </div>
       </div>
-    </section-area>
+    </section-head>
 
     <section id="books-english">
       <h1>English</h1>
