--- a/documentation-articles.html
+++ b/documentation-articles.html
@@ -86,7 +86,7 @@
   </div>
 
   <article>
-    <section-area>
+    <section-head>
       <div class="link-grid">
         <div class="link-button">
           <a href="documentation.html"><i class="fas fa-scroll"></i></a>
@@ -105,7 +105,7 @@
           <h1><a href="documentation-articles.html">Articles / Blogs</a></h1>
         </div>
       </div>
-    </section-area>
+    </section-head>
 
     <section id="tutorials-blogs">
       <h1>Articles / Blogs</h1>
