--- a/cheatsheet/snapshot.html
+++ b/cheatsheet/snapshot.html
@@ -250,7 +250,7 @@
           | <a href="https://github.com/openscad/openscad/issues" target="_blank">Issues</a>
           | <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual" target="_blank">Manual</a>
           | <a href="https://github.com/openscad/MCAD" target="_blank">MCAD library</a>
-          | <a href="https://forum.openscad.org" target="_blank">Forum</a>
+          | <a href="https://openscad.org/community.html#forum" target="_blank">Mailing list</a>
           | <a href="http://fablabamersfoort.nl/book/openscad" target="_blank">Other links</a>
       </article>
     </section>
