Remove non-functional 32-bit windows snapshot download.

--- a/downloads.html
+++ b/downloads.html
@@ -456,27 +456,7 @@
 			<div id="snapshots-windows" class="subsection">
 				<h2>Windows</h2>
 
-				<p>System requirements: Windows 10 or newer, Intel systems.</p>
-
-				<div class="left, download-button">
-					<a id="WIN32_SNAPSHOT_INSTALLER_URL" href="https://files.openscad.org">
-					<h3 id="WIN32_SNAPSHOT_INSTALLER_NAME">OpenSCAD</h3></a>
-					<small>x86 (32-bit) - exe installer - </small><small id="WIN32_SNAPSHOT_INSTALLER_SIZE">?? MB</small><br>
-					<!-- <small><a id="WIN32_SNAPSHOT_INSTALLER_ASC_URL" href="">asc</a></small> - -->
-					<small><a id="WIN32_SNAPSHOT_INSTALLER_SHA256_URL" href="">sha256</a></small> -
-					<small><a id="WIN32_SNAPSHOT_INSTALLER_SHA512_URL" href="">sha512</a></small>
-				</div>
-
-				<div class="download-button">
-					<a id="WIN32_SNAPSHOT_ZIP_URL" href="https://files.openscad.org">
-					<h3 id="WIN32_SNAPSHOT_ZIP_NAME">OpenSCAD</h3></a>
-					<small>x86 (32-bit) - zip package - </small><small id="WIN32_SNAPSHOT_ZIP_SIZE">?? MB</small><br>
-					<!-- <small><a id="WIN32_SNAPSHOT_ZIP_ASC_URL" href="">asc</a></small> - -->
-					<small><a id="WIN32_SNAPSHOT_ZIP_SHA256_URL" href="">sha256</a></small> -
-					<small><a id="WIN32_SNAPSHOT_ZIP_SHA512_URL" href="">sha512</a></small>
-				</div>
-
-		        <br>
+				<p>System requirements: Windows 10 (64-bit), or newer, Intel system.</p>
 
 				<div class="left, download-button">
 					<a id="WIN64_SNAPSHOT_INSTALLER_URL" href="https://files.openscad.org">
