Add OpenSCAD Asset Collection.

--- a/libraries.html
+++ b/libraries.html
@@ -69,6 +69,7 @@
         <li>&centerdot;&nbsp;<a href="#FunctionalOpenSCAD">Functional OpenSCAD</a></li>
         <li>&centerdot;&nbsp;<a href="#constructive">Constructive</a></li>
         <li>&centerdot;&nbsp;<a href="#BOLTS">BOLTS</a></li>
+        <li>&centerdot;&nbsp;<a href="#Assets">Asset Collection</a></li>
       </ul>
       <li><a href="#singletopic">Single Topic</a></li>
       <ul>
@@ -180,6 +181,19 @@
         <li><a href="https://github.com/boltsparts/BOLTS">Library</a></li>
         <li><a href="https://boltsparts.github.io/en/index.html">Documentation</a></li>
         <li>License: <a href="https://spdx.org/licenses/LGPL-2.1-or-later.html">LGPL-2.1-or-later</a> | <a href="https://spdx.org/licenses/GPL-3.0-only.html">GPL-3.0-only</a></li>
+      </ul>
+      <p style="clear: both"></p>
+
+      <img class="libimg" src="images/angelo-nicoli-assets.gif" width="200" align="right">
+      <h2 id="Assets">Asset Collection</h2>
+      <p>
+        A collection of OpenSCAD Scripts. There are some mechanical parts, as well as furniture and
+        models that can be used as base mesh for 3D animations and game design.
+      </p>
+      <ul>
+        <li><a href="https://github.com/AngeloNicoli/OpenSCAD-Snippet">Library</a></li>
+        <li><a href="https://github.com/AngeloNicoli/OpenSCAD-Snippet/blob/main/README.md">Documentation</a></li>
+        <li>License: <a href="https://spdx.org/licenses/MIT.html">MIT</a></li>
       </ul>
       <p style="clear: both"></p>
     </section>
