--- a/downloads.html
+++ b/downloads.html
@@ -663,6 +663,11 @@
 					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_23.10/ ./</code></small>
 				</pre>
 
+				<h3>Ubuntu 24.04 (x86_64, aarch64)</h3>
+				<pre>
+					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_24.04/ ./</code></small>
+				</pre>
+
 				<h2>openSUSE packages built on <a href="https://build.opensuse.org/">OpenSUSE build service</a></h2>
 			
 				<h3>openSUSE Leap 15.3 (64-bit only)</h3>
