--- a/downloads.html
+++ b/downloads.html
@@ -638,6 +638,11 @@
 					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/Raspbian_11/ ./</code></small>
 				</pre>
 
+				<h3>Raspbian 12 (64-bit only)</h3>
+				<pre>
+					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/Raspbian_12/ ./</code></small>
+				</pre>
+
 				<h3>Ubuntu 22.04 (x86_64, aarch64)</h3>
 				<pre>
 					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_22.04/ ./</code></small>
