feat: selfhost opencollective donate button

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 	<div id="logo" class="left"></div>
 	<div id="donate" class="right">
     <a href="https://opencollective.com/openscad/donate" target="_blank">
-      <img src="https://opencollective.com/openscad/donate/button@2x.png?color=white" width="200" />
+      <img src="assets/img/donate-opencollective.png" alt="Donate on Opencollective" width="200" height="33">
     </a>
 	</div>
 	<div id="title" style="margin-top:35px; width:620px;">
