--- a/documentation-videos.html
+++ b/documentation-videos.html
@@ -75,6 +75,7 @@
     <h1><a href="documentation-videos.html">Videos</a></h1>
     <ul>
       <li><a href="documentation-videos.html#introduction">OpenSCAD: Introduction</a></li>
+      <li><a href="documentation-videos.html#video-series">OpenSCAD Video Series</a></li>
     </ul>
     <h1><a href="documentation-articles.html">Articles / Blogs</a></h1>
     <ul>
@@ -111,6 +112,14 @@
       <h1>Videos</h1>
 
       <div class="tutorial-links">
+        <iframe class="img-container" src="https://www.youtube-nocookie.com/embed/MfBRMX6NfCE" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p class="text-container">
+          <h2 id="video-series"><a href="https://www.youtube.com/playlist?list=PLP1VMsgQcRUmC1jJhZrTId9rvjQ1m2FBH">OpenSCAD Video Series (27 parts)</a></h2>
+          <small>by <a href="https://www.youtube.com/@CharthuliusWheezer">Charthulius Wheezer</a></small>
+        </p>
+      </div>
+
+      <div class="tutorial-links">
         <iframe class="img-container" src="https://www.youtube.com/embed/dzzFOU_Ggrs" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p class="text-container">
           <h2 id="introduction"><a href="https://www.youtube.com/watch?v=dzzFOU_Ggrs">OpenSCAD: Introduction</a></h2>
@@ -140,3 +149,4 @@
 
 </body>
 </html>
+
