--- a/downloads.html
+++ b/downloads.html
@@ -440,7 +440,7 @@
 			<div id="snapshots-osx" class="subsection">
 				<h2>macOS</h2>
 
-				<p>System requirements: macOS 10.15 "Catalina" or newer, universal build supporting Intel and Apple Silicon systems.</p>
+				<p>System requirements: macOS 11 "Big Sur" or newer, universal build supporting Intel and Apple Silicon systems.</p>
 
 				<div class="left, download-button">
 					<a id="MAC_SNAPSHOT_URL" href="https://files.openscad.org">
