Update fontawesome; add Bluesky links.

--- a/community.html
+++ b/community.html
@@ -57,7 +57,7 @@
 </header>
 
 <div id="page-content">
-	
+
 	<div id="sidebar" class="sticky">
 		<h1>Community</h1>
 		<ul>
@@ -68,12 +68,12 @@
 <li><a href="#social-media">Social Media</a></li>
 <li><a href="#other">Other</a></li>
 <li><a href="https://github.com/openscad/openscad/" title="GitHub"><i class="fab fa-github"></i></a> &nbsp;
-    <a href="http://twitter.com/openscad" title="Twitter"><i class="fab fa-twitter"></i></a> &nbsp;
+    <a href="https://bsky.app/profile/openscad.bsky.social" title="Bluesky"><i class="fab fa-bluesky"></i></a> &nbsp;
     <a href="https://fosstodon.org/@OpenSCAD" title="Mastodon" rel="me"><i class="fab fa-mastodon"></i></a> &nbsp;&nbsp;
     <a href="https://web.libera.chat/?channel=#openscad" title="IRC"><i style="font-size: x-large;" class="fas fa-comment"></i></a></li>
 		</ul>
 	</div>
-	
+
 	<article>
 
     <section-head>
@@ -120,7 +120,7 @@
         <li>Please do not use BountySource for now, their status is unknown and it's unclear if they still process bounties as expected!</li>
       </ul>
 		</section>
-	
+
 		<section id="forum">
 			<h1>Forum / Mailing List</h1>
       <ul>
@@ -152,10 +152,10 @@
       <h1>Social Media</h1>
       <ul>
         <li>Mastodon: <a href="https://fosstodon.org/@OpenSCAD">@OpenSCAD@fosstodon.org</a></li>
-        <li>Twitter: <a href="https://twitter.com/openscad">openscad</a></li>
+        <li>Bluesky: <a href="https://bsky.app/profile/openscad.bsky.social">@openscad.bsky.social</a></li>
       </ul>
     </section>
-		
+
 		<section id="other">
 			<h1>Other</h1>
       <ul>
@@ -172,7 +172,7 @@
 </div><!--#page-content end-->
 
 <footer>
-	
+
 </footer>
 </div><!--#page-wrap end-->
 
