--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		<h1 class="title" style="position:relative;"><span class="green">Open</span>SCAD</h1>
 		<h2 class="subtitle" style="position:relative; left:45px;">The Programmers Solid 3D CAD Modeller</h2>
 	</div>
-	
+
 	<div id="navigation">
 	<div id="navigation-inner">
     <ul class="nav">
@@ -98,11 +98,11 @@
 </header>
 
 <div id="page-content">
-	
+
 	<div id="sidebar">
     <div style="padding-bottom: 0.5rem;">
     <a href="https://github.com/openscad/openscad/" title="GitHub"><i class="fab fa-github"></i></a> &nbsp;
-    <a href="https://twitter.com/openscad" title="Twitter"><i class="fab fa-twitter"></i></a> &nbsp;
+    <a href="https://bsky.app/profile/openscad.bsky.social" title="Bluesky"><i class="fab fa-bluesky"></i></a> &nbsp;
     <a href="https://fosstodon.org/@OpenSCAD" title="Mastodon" rel="me"><i class="fab fa-mastodon"></i></a> &nbsp;&nbsp;
     <a href="https://web.libera.chat/?channel=#openscad" title="IRC"><i style="font-size: x-large;" class="fas fa-comment"></i></a>
     </div>
@@ -110,7 +110,7 @@
 		<ul>
 		</ul>
 	</div>
-	
+
   <article>
     <div id="snow">
     <section-area id="ticker" class="snow">
@@ -180,7 +180,7 @@
 </div><!--#page-content end-->
 
 <footer>
-	
+
 </footer>
 </div><!--#page-wrap end-->
 
