--- a/advent-calendar-2024/index.html
+++ b/advent-calendar-2024/index.html
@@ -521,7 +521,8 @@ a.link:hover {
       <br><span class="gray small">Advent Calendar 2024</span>
       <br><span class="gray small"><i>Tutorial Edition</i></span>
       <br><span class="gray small">#SCADvent &nbsp;
-      <a class="gray" href="https://fosstodon.org/@OpenSCAD" title="Mastodon" rel="me"><i class="fab fa-mastodon"></i></a>
+      <a class="gray" href="https://fosstodon.org/@OpenSCAD" title="Mastodon" rel="me"><i class="fab fa-mastodon"></i></a> &nbsp;
+      <a class="gray" href="https://bsky.app/profile/openscad.bsky.social" title="Bluesky"><i class="fab fa-bluesky"></i></a>
       </span>
       <img src="https://openscad.org/images/openscad.png">
     </p>
