Update Advent Calendar; Open doors; Add to gallery.

--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
 	<title>OpenSCAD - Gallery</title>
 
 	<link href="assets/css/style.css" rel="stylesheet">
-  
+
 	<link href="assets/fonts/open-sans/all.css" rel="stylesheet">
 	<link href="assets/fontawesome/css/brands.min.css" rel="stylesheet">
 	<link href="assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
@@ -62,7 +62,7 @@
 </header>
 
 <div id="page-content">
-	
+
 	<div id="sidebar" class="sticky">
 		<h1>Gallery</h1>
 		<ul>
@@ -77,15 +77,16 @@
 			<li><a href="advent-calendar-2021/">2021 Advent Calendar</a></li>
 			<li><a href="advent-calendar-2022/">2022 Advent Calendar</a></li>
 			<li><a href="advent-calendar-2023/">2023 Advent Calendar</a></li>
+			<li><a href="advent-calendar-2024/">2024 Advent Calendar</a></li>
 		</ul>
 	</div>
-	
+
 	<article>
-		
+
 		<section id="gallery" class="left">
 			<h1>OpenSCAD Gallery</h1>
 		</section>
-	
+
 	</article>
 
 <div class="clear"></div>
@@ -93,7 +94,7 @@
 </div><!--#page-content end-->
 
 <footer>
-	
+
 </footer>
 </div><!--#page-wrap end-->
 
