--- a/advent-calendar-2019/index.html
+++ b/advent-calendar-2019/index.html
@@ -292,6 +292,8 @@ All scripts are licensed <a class="footer" href="https://creativecommons.org/pub
 <span class="sep">-</span>
 <a class="footer" href="https://openscad.org/advent-calendar-2023/">2023</a>
 <span class="sep">-</span>
+<a class="footer" href="https://openscad.org/advent-calendar-2024/">2024</a>
+<span class="sep">-</span>
 </div>
 </body>
 </html>
