--- a/advent-calendar-2023/index.html
+++ b/advent-calendar-2023/index.html
@@ -576,6 +576,8 @@ All scripts are licensed <a class="link" href="https://creativecommons.org/publi
 <span class="sep">-</span>
 <a class="link" href="https://openscad.org/advent-calendar-2023/">2023</a>
 <span class="sep">-</span>
+<a class="link" href="https://openscad.org/advent-calendar-2024/">2024</a>
+<span class="sep">-</span>
 </div>
 <div id="modal" class="modal">
   <div class="modal-content">
